- FIX: Attempt at fixing an x overflow caused by large tables. No idea why this is happening, but a hidden overflow-x on the body fixes it.

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -2,6 +2,8 @@
 
 body {
   background-color: #ffffff;
+  // This is to stop tables from overflowing in production.
+  overflow-x: hidden;
 }
 
 .sidebar .nav-link * {
